feature: новая спека + наименорвание приоритета
