# src/main/java/ru/newgor/wishlist/domain/ItemUpdateModel.java
@@ -4,7 +4,6 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-import ru.newgor.wishlist.domain.enums.ItemStatusEnum;
 
 import java.time.Instant;
 import java.util.UUID;
@@ -13,19 +12,18 @@ import java.util.UUID;
 @Setter
 @NoArgsConstructor
 @AllArgsConstructor
-public class ItemModel {
+public class ItemUpdateModel {
 
     private UUID id;
+    private Instant createDate;
+    private Instant lastUpdateDate;
     private String name;
     private String amount;
+    private Boolean reserved;
+    private String priority;
+    private String priorityName;
     private String currency;
     private String description;
     private String linkToSite;
-    private int priority;
-    private String priorityName;
     private String image;
-    private ItemStatusEnum status;
-    private boolean reserved;
-    private Instant createDate;
-    private Instant lastUpdateDate;
 }
